2004-09-22  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (MemberBase.IsTypePermitted): New protected
	method for checking error CS0610.

2004-09-22  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (TypeContainer.HasExplicitLayout): New property
	Returns whether container has StructLayout attribute set Explicit.
	(FieldMember): New abstract class for consts and fields.
	(FieldMember.ApplyAttributeBuilder): Add error 636 and 637 report.
	(Field): Reuse FieldMember.

	* const.cs (Const): Reuse FieldMember.

	* rootcontext.cs: EmitConstants call moved to class.

2004-09-22  Martin Baulig  <martin@ximian.com>

	Thanks to Peter Sestoft for this bug report.

	* expression.cs (Conditional): If both the `trueExpr' and the
	`falseExpr' is a NullLiteral, return a NullLiteral.

2004-09-22  Martin Baulig  <martin@ximian.com>

	* statement.cs (Foreach.EmitCollectionForeach): If we're in an
	iterator, use `enumerator.EmitThis()' instead of `ec.EmitThis()'
	for the "get_Current" call.

2004-09-22  Martin Baulig  <martin@ximian.com>

	Marek and me just fixed one of our oldest bugs: #28562 :-)

	* ecore.cs (EnumConstant.GetValueAsEnumType): New public method.

	* attribute.cs (Attribute.GetAttributeArgumentExpression): If
	we're an EnumConstant, just return that.
	(Attribute.Resolve): GetAttributeArgumentExpression() may give us
	an EnumConstant.  In this case, we need to use GetValueAsEnumType()
	to get the value which'll actually be written into the attribute.
	However, we have to use GetValue() to access the attribute's value
	in the compiler.	

2004-09-22  Marek Safar  <marek.safar@seznam.cz>

	* constant.cs (Constant.IsNegative): New abstract property
	IsNegative.

	* expression.cs (ArrayAccess.DoResolve): Add warning 251.
	(StackAlloc.DoResolve): Reused IsNegative.

2004-09-21  Martin Baulig  <martin@ximian.com>

	Merged latest changes into gmcs.  Please keep this comment in
	here, it makes it easier for me to see what changed in MCS since
	the last time I merged.
