@@ -1,3 +1,7 @@
+2004-09-23  Marek Safar  <marek.safar@seznam.cz>
+
+	* class.cs (Operator.Define): Add error 448 and 559 report.
+        
 2004-09-22  Marek Safar  <marek.safar@seznam.cz>
 
 	* class.cs (MemberBase.IsTypePermitted): New protected
